# term-comparison

./: .gitignore  CLAUDE.md  LICENSE  README.md  modal_app.py  netlify.toml  pyproject.toml
docs/superpowers/plans/: 2026-07-14-deploy-corrected-definitions.md
scripts/: verify_corpus.py
src/term_comparison/: api.py  cli.py  llm.py  models.py
tests/: test_api.py  test_llm.py
web/: .env.production  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
web/src/: App.vue  citation-format.ts  citation.ts  crossref.ts  highlight.ts  main.ts  style.css  tour.ts  types.ts
web/src/components/: AboutModal.vue  CorpusStats.vue  DefinitionPanel.vue  TermBrowser.vue
web/src/styles/: tokens.css
web/tests/: AboutModal.test.ts  App.test.ts  CorpusStats.test.ts  DefinitionPanel.test.ts  TermBrowser.test.ts  a11y.spec.ts  citation-format.test.ts  citation.test.ts  cleanup.sh  crossref.test.ts  e2e.spec.ts  highlight.test.ts  tour-dismissal.test.ts  tour.test.ts
