[build-system]
requires = ["setuptools>=72"]
build-backend = "setuptools.build_meta"

[project]
name = "term-comparison"
version = "0.1.2"
description = "IM2026 'Build a Bureaucrat Bot' entry — legislative term-comparison tool over lex-au-graph"
authors = [{name = "Ching Chew", email = "ching.chew@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "click>=8.1",
    "anthropic>=0.40.0",
]

[project.urls]
Repository = "https://github.com/cchew/term-comparison"

[project.scripts]
term-comparison = "term_comparison.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
]
deploy = [
    "modal>=0.68",
]

[tool.setuptools.packages.find]
where = ["src"]
